--- a/movie_search/views/result.ejs
+++ b/movie_search/views/result.ejs
@@ -1,1 +1,6 @@
-<h1><%=data.Title%></h1>
+<h5>Title: <%=data.Title%></h5>
+<h5>Genre: <%=data.Genre%></h5>
+<h5>Director: <%=data.Director%></h5>
+<h5>Released: <%=data.Released%></h5>
+<h5>Rated: <%=data.Rated%></h5>
+<h5>IMDB Rating: <%=data.imdbRating%></h5>
