Add bootstrap classes

--- a/movie_search/views/partials/header.ejs
+++ b/movie_search/views/partials/header.ejs
@@ -8,4 +8,8 @@
     <title>Movie Search</title>
 </head>
 <body>
-    
+    <div class="container">
+<div class="jumbotron">
+    <h1 class="display-4">Welcome To MovieSearch</h1>
+    <p class="lead">Here You Can Search Your favourite Movies,Series And More...</p>
+</div>   
