--- a/movie_search/views/search.ejs
+++ b/movie_search/views/search.ejs
@@ -1,4 +1,6 @@
+<%-include("partials/header") %>
 <form action="/results" method="GET">
 <input type="text" name="s" placeholder="Movie Name">
 <input type="submit">
 </form>
+<%-include("partials/footer")%>
